Added raster image support, tooltips

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,10 +1,13 @@
 \documentclass[aspectratio=169]{beamer}
 %ENUMITEM%
 
-\usepackage{fontspec}
-\usepackage{minted}
-\usepackage{tcolorbox}
-\usepackage{svg}
+\usepackage{fontspec}   %to allow change to font
+\usepackage{minted}     %for code listings
+\usepackage{tcolorbox}  %for boxes around code directives
+\usepackage{svg}        %allows including svg images
+\usepackage{graphicx}   %allows including raster images
+\usepackage{pdfcomment} %for tooltips (accessibility)
+
 
 \begin{document}
 
