--- a/preamble.tex
+++ b/preamble.tex
@@ -7,7 +7,7 @@
 \usepackage{svg}        %allows including svg images
 \usepackage{graphicx}   %allows including raster images
 \usepackage{pdfcomment} %for tooltips (accessibility)
-
+\usepackage{hyperref}   %for hyperlinks and links to local files
 
 \begin{document}
 
