--- a/preamble.tex
+++ b/preamble.tex
@@ -8,8 +8,10 @@
 \usepackage{graphicx}       %allows including raster images
 \usepackage{pdfcomment}     %for tooltips (accessibility)
 \usepackage{hyperref}       %for hyperlinks and links to local files
+\usepackage{accsupp}        %for accessibility
 
 \begin{document}
+
 
 \hypersetup{
     colorlinks=true,
