--- a/preamble.tex
+++ b/preamble.tex
@@ -8,10 +8,11 @@
 \usepackage{graphicx}       %allows including raster images
 \usepackage{pdfcomment}     %for tooltips (accessibility)
 \usepackage{hyperref}       %for hyperlinks and links to local files
-\usepackage{accsupp}        %for accessibility
+\usepackage[document]{ragged2e}
 
 \begin{document}
 
+%ref: https://tex.stackexchange.com/questions/317586/text-copied-from-pdf-is-missing-spaces-or-has-extra-ones
 
 \hypersetup{
     colorlinks=true,
